--- a/StudentManagementSystem/StudentManagementSystem.csproj
+++ b/StudentManagementSystem/StudentManagementSystem.csproj
@@ -189,6 +189,7 @@
       <DependentUpon>SMSModel.edmx</DependentUpon>
       <LastGenOutput>SMSModel.cs</LastGenOutput>
     </Content>
+    <Content Include="SQL_Script.sql" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
